--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1>Le "Tiger"</h1>
-<p href="para1">Le Tiger I (Tigre I), diminutif de Panzerkampfwagen VI Tiger Ausführung E - Sonderkraftfahrzeug 181, char d'assaut lourd allemand en service de 1942 à 1945, est l'un des chars les plus connus de la Seconde Guerre mondiale, bien qu'il n'ait été que peu produit par rapport au T-34 soviétique ou au Sherman américain.</p>
+<p href="para1" style="background-color:#3498db">Le Tiger I (Tigre I), diminutif de Panzerkampfwagen VI Tiger Ausführung E - Sonderkraftfahrzeug 181, char d'assaut lourd allemand en service de 1942 à 1945, est l'un des chars les plus connus de la Seconde Guerre mondiale, bien qu'il n'ait été que peu produit par rapport au T-34 soviétique ou au Sherman américain.</p>
 
 
 <h1>Dimension</h1>
