--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Le Panzerkampfwagen VI</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -12,12 +12,12 @@
 
 
 <h1>Dimension</h1>
-<p href="para2">Ce sont ses dimensions, ses lignes très carrées, sa résistance au combat, sa puissance ainsi que les équipages expérimentés l'ayant mené au feu qui ont marqué les esprits, notamment du fait de la propagande allemande.
+<p href="para2" style="background-color:#ecf0f1">Ce sont ses dimensions, ses lignes très carrées, sa résistance au combat, sa puissance ainsi que les équipages expérimentés l'ayant mené au feu qui ont marqué les esprits, notamment du fait de la propagande allemande.
 Il convient cependant de ne pas le confondre avec la série de chars à laquelle il appartient, le nom de "Tigre" est donné à l'ensemble des Panzer. VI. Le Panzerkampfwagen VI Ausf. B (H) Tiger II (ou Königstiger) n'est qu'une version du char Tigre, certes très différente des précédentes.</p>
 
 
 <h1>Développement</h1>
-<p href="para3">Son développement a commencé en 1937 et, quand il apparaît pour la première fois sur le front, le 29 août 1942, près de Léningrad, il est alors le char techniquement le plus avancé, le mieux protégé et le plus puissant aligné par l'Axe, affichant une mobilité limitée mais exceptionnelle pour un engin qui fait plus de deux fois le poids de ses prédécesseurs et de la majorité de ses adversaires chenillés. Mais ce char lourd a pâti tout au long de sa carrière de sa mécanique très fragile réduisant considérablement sa disponibilité au feu, et qui, avec sa faible autonomie et son poids excessif, compliquait sa mise en œuvre opérationnelle. Construit à seulement 1 350 exemplaires, il n'a été que rarement endivisionné mais plutôt engagé dans des unités indépendantes.</p>
-<img src="/images/calais.jpg" alt="Calais">
+<p href="para3" style="background-color:#c0392b">Son développement a commencé en 1937 et, quand il apparaît pour la première fois sur le front, le 29 août 1942, près de Léningrad, il est alors le char techniquement le plus avancé, le mieux protégé et le plus puissant aligné par l'Axe, affichant une mobilité limitée mais exceptionnelle pour un engin qui fait plus de deux fois le poids de ses prédécesseurs et de la majorité de ses adversaires chenillés. Mais ce char lourd a pâti tout au long de sa carrière de sa mécanique très fragile réduisant considérablement sa disponibilité au feu, et qui, avec sa faible autonomie et son poids excessif, compliquait sa mise en œuvre opérationnelle. Construit à seulement 1 350 exemplaires, il n'a été que rarement endivisionné mais plutôt engagé dans des unités indépendantes.</p>
+<img src="images/calais.jpg" id="Calais">
 </body>
 </html>
