--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Il convient cependant de ne pas le confondre avec la série de chars à laquelle
 
 <h1>Développement</h1>
 <p href="para3" style="background-color:#c0392b">Son développement a commencé en 1937 et, quand il apparaît pour la première fois sur le front, le 29 août 1942, près de Léningrad, il est alors le char techniquement le plus avancé, le mieux protégé et le plus puissant aligné par l'Axe, affichant une mobilité limitée mais exceptionnelle pour un engin qui fait plus de deux fois le poids de ses prédécesseurs et de la majorité de ses adversaires chenillés. Mais ce char lourd a pâti tout au long de sa carrière de sa mécanique très fragile réduisant considérablement sa disponibilité au feu, et qui, avec sa faible autonomie et son poids excessif, compliquait sa mise en œuvre opérationnelle. Construit à seulement 1 350 exemplaires, il n'a été que rarement endivisionné mais plutôt engagé dans des unités indépendantes.</p>
-<img src="img/calais.jpg" id="Calais"/>
+<img src="img/calais.jpg" id="Calais" style="width:128px;height:128px;"/>
 
 </body>
 </html>
