--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ Age:<input type="number" name="age" placeholder="Age"/><br>
 Date de Naissance:<input type="date" name="date" placeholder="JJ/MM/AAAA"/><br>
 E-Mail:<input type="email" name="mail" placeholder="********@******.fr"/><br>
 Telephone:<input type="tel" name="telephone" placeholder="0000000000"/><br>
+Facebook:<input type="url" name="facebook" placeholder="www.facebook.com"/><br>
 </form>
 </body>
 </html>
