--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@ E-Mail:<input type="email" name="mail" placeholder="********@******.fr"/><br>
 Telephone:<input type="tel" name="telephone" placeholder="0000000000"/><br>
 Facebook:<input type="url" name="facebook" placeholder="www.facebook.com"/><br>
 </form>
+<script>if(typeof console!='undefined') console.debug('Affichage du body HTML');
+</script>
 </body>
 </html>
