--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ Nom: <input type="text" name="nom" placeholder="Nom"/><br>
 Age:<input type="number" name="age" placeholder="Age"/><br>
 Date de Naissance:<input type="date" name="date"/><br>
 E-Mail:<input type="email" name="mail" placeholder="********@******.fr"/><br>
-Telephone:<input type="tel" name="telephone" placeholder="0000000000"/><br>
-Facebook:<input type="url" name="facebook" placeholder="www.facebook.com"/><br>
+Telephone:<input type="tel" name="telephone" /><br>
+Facebook:<input type="url" name="facebook" /><br>
 </form>
 <script>if(typeof console!='undefined') console.debug('Affichage du body HTML');
 </script>
