--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Le Panzerkampfwagen VI</title>
+  <title>Le Panzerkampfwagen VI v2.0</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/calais.jpg">
+  <link rel="stylesheet" media="mobile" href="css/mobile.css" type="text/css">
 </head>
 
 <body>
