--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Il convient cependant de ne pas le confondre avec la série de chars à laquelle
 
 <table>
 <tr>
-<td id="titre">Sports</td>
+<th id="titre">Sports</th>
 <td>Tennis de table</td>
 <td>Football</td>
 <td>Poney</td>
@@ -35,7 +35,7 @@ Il convient cependant de ne pas le confondre avec la série de chars à laquelle
 <td>Basketball</td>
 </tr>
 <tr>
-<td id="titre">Compétitions</td>
+<th id="titre">Compétitions</th>
 <td>Jeux Olympiques</td>
 <td>Championnats d'Europe</td>
 <td>Coupe du Monde</td>
