--- a/index.html
+++ b/index.html
@@ -25,24 +25,28 @@ Il convient cependant de ne pas le confondre avec la série de chars à laquelle
 <img src="img/calais.jpg" alt="Mairie de Calais" id="Calais" style="width: 50.0rem; max-width: 100%;"/>
 
 <table>
+<thead>
+	<tr>
+		<td id="titre">Sports</td>
+		<td>Tennis de table</td>
+		<td>Football</td>
+		<td>Poney</td>
+		<td>Curling</td>
+		<td>Patinnage Artistique</td>
+		<td>Basketball</td>
+	</tr>
+</thead>
+<tbody>
 <tr>
-<th id="titre">Sports</th>
-<td>Tennis de table</td>
-<td>Football</td>
-<td>Poney</td>
-<td>Curling</td>
-<td>Patinnage Artistique</td>
-<td>Basketball</td>
+	<th id="titre">Compétitions</th>
+	<td>Jeux Olympiques</td>
+	<td>Championnats d'Europe</td>
+	<td>Coupe du Monde</td>
+	<td>Championnats régionnaux</td>
+	<td>Coupe District</td>
+	<td>NBA</td>
 </tr>
-<tr>
-<th id="titre">Compétitions</th>
-<td>Jeux Olympiques</td>
-<td>Championnats d'Europe</td>
-<td>Coupe du Monde</td>
-<td>Championnats régionnaux</td>
-<td>Coupe District</td>
-<td>NBA</td>
-</tr>
+</tbody>
 </table>
 
 <h2>Formulaire</h2>
