--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Le Panzerkampfwagen VI</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/calais.jpg">
-  <link rel="stylesheet" media="mobile" href="css/mobile.css" type="text/css">
 </head>
 
 <body>
@@ -25,9 +24,8 @@ Il convient cependant de ne pas le confondre avec la série de chars à laquelle
 <img src="img/calais.jpg" alt="Mairie de Calais" id="Calais" style="width: 50.0rem; max-width: 100%;"/>
 
 <table>
-<thead>
 	<tr>
-		<td id="titre">Sports</td>
+		<th>Sports</th>
 		<td>Tennis de table</td>
 		<td>Football</td>
 		<td>Poney</td>
@@ -35,18 +33,15 @@ Il convient cependant de ne pas le confondre avec la série de chars à laquelle
 		<td>Patinnage Artistique</td>
 		<td>Basketball</td>
 	</tr>
-</thead>
-<tbody>
-<tr>
-	<th id="titre">Compétitions</th>
-	<td>Jeux Olympiques</td>
-	<td>Championnats d'Europe</td>
-	<td>Coupe du Monde</td>
-	<td>Championnats régionnaux</td>
-	<td>Coupe District</td>
-	<td>NBA</td>
-</tr>
-</tbody>
+	<tr>
+		<th>Compétitions</th>
+		<td>Jeux Olympiques</td>
+		<td>Championnats d'Europe</td>
+		<td>Coupe du Monde</td>
+		<td>Championnats régionnaux</td>
+		<td>Coupe District</td>
+		<td>NBA</td>
+	</tr>
 </table>
 
 <h2>Formulaire</h2>
