--- a/Tp2/index.html
+++ b/Tp2/index.html
@@ -8,6 +8,14 @@
 
 </head>
 <body>
+<div id="header">
+	<img src="img/LogoMercy.jpg" alt="Logo" id="LogoMercy"/>
+	<div id="case">
+		<a id="Accueil" href="">Accueil</a>
+		<a id="Heros" href="">Héros</a>
+		<a id="Contact" href="">Contact</a>
+	
+</div>
 <img src="img/Mercy.jpg" alt="Mercy" id="Mercy"/>
 <h1>Biographie</h1>
 <p>Véritable ange gardien pour ceux qu’elle prend en charge, le docteur Angela Ziegler est une soignante hors pair, une scientifique brillante et une fervente partisane de la paix.<br>
@@ -18,7 +26,7 @@ Même si elle passe maintenant l’essentiel de son temps à soigner les victime
 <div id="Competences">
 	<img src="img/Caducee.png" alt="Le Caducée" id="Arme1"/>
 	<img src="img/Misericorde.png" alt="Le Miséricorde" id="Arme2"/>
-	<img src="img/Ange.jpg" alt="Ange Gardien" id="Ange"/>
+	<img src="img/Ange.png" alt="Ange Gardien" id="Ange"/>
 	<img src="img/Ultimate.png" alt="Résurrection" id="Ulti"/>
 </div>
 </body>
