--- a/Tp2/index.html
+++ b/Tp2/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Mercy Overwatch</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="img/LogoMercy.png">
@@ -23,7 +24,6 @@
 	
 </div>
 <div id="image">
-<!--<img src="img/Mercy.jpg" alt="Mercy" id="Mercy"/>-->
 </div>
 <h1>Biographie</h1>
 <p>Véritable ange gardien pour ceux qu’elle prend en charge, le docteur Angela Ziegler est une soignante hors pair, une scientifique brillante et une fervente partisane de la paix.<br>
@@ -80,5 +80,7 @@ Même si elle passe maintenant l’essentiel de son temps à soigner les victime
 <div id="footer">
 	<p>CARON Jean Tpc</p>
 </div>
+<script>if(typeof console!='undefined') console.debug('Affichage du Body HTML');
+</script>
 </body>
 </html>
