--- a/Tp2/index.html
+++ b/Tp2/index.html
@@ -23,7 +23,7 @@
 	</div>
 	
 </div>
-<div id="image">
+<div id="imageback">
 </div>
 <h1>Biographie</h1>
 <p>Véritable ange gardien pour ceux qu’elle prend en charge, le docteur Angela Ziegler est une soignante hors pair, une scientifique brillante et une fervente partisane de la paix.<br>
